Update colony configuration and implement new structures
- Added colony_min_distance, residents_base_growth, and space_generation_range to config.json.
- Refactored colony.py to utilize new configuration values for distance and space generation.
- Introduced Urban Park model files and created corresponding React component for ColonyMetropolis.
- Updated Colony component to dynamically select base structure based on colony level.
- Changed sample data to reflect new colony level 'Metropolis'.

commit AI generated.

--- a/backend/config.json
+++ b/backend/config.json
@@ -1,4 +1,7 @@
 {
     "defaultResidents": 100,
-    "resident_update_interval": 5
+    "resident_update_interval": 5,
+    "colony_min_distance": 40,
+    "residents_base_growth": 10,
+    "space_generation_range": {"min": -100, "max": 100}
 }
