--- a/backend/config.json
+++ b/backend/config.json
@@ -2,6 +2,7 @@
     "defaultResidents": 100,
     "resident_update_interval": 5,
     "colony_min_distance": 40,
+    "min_building_distance": 12.0,
     "planet_model_radius": 15.0,
     "residents_base_growth": 10,
     "space_generation_range": {"min": -100, "max": 100},
@@ -15,10 +16,15 @@
     "building_capacity_per_steel": 50,
     "building_capacity_per_oil": 30,
     
-    "initial_resource_storage": 1000.0,
+    "initial_steel_storage": 600.0,
+    "initial_oil_storage": 250.0,
+    "initial_water_storage": 300.0,
     
     "oil_pump_steel_cost": 200,
     "oil_pump_max_per_planet": 3,
+    
+    "steel_factory_oil_cost": 200,
+    "steel_factory_max_per_planet": 3,
     
     "flanker_group_size": 3,
     "flanker_steel_cost": 300,
