--- a/backend/config.json
+++ b/backend/config.json
@@ -1,4 +1,5 @@
 {
+    "use_debug_scenario": false,
     "defaultResidents": 100,
     "resident_update_interval": 5,
     "colony_min_distance": 40,
@@ -26,12 +27,23 @@
     "steel_factory_oil_cost": 200,
     "steel_factory_max_per_planet": 3,
     
+    "scout_group_size": 1,
+    "scout_steel_cost": 5,
+    "scout_oil_cost": 5,
+    "scout_build_cooldown": 15,
+
     "flanker_group_size": 3,
-    "flanker_steel_cost": 300,
-    "flanker_oil_cost": 150,
+    "flanker_steel_cost": 1,
+    "flanker_oil_cost": 1,
     "flanker_spawn_height": 5,
     "flanker_spacing": 1.5,
     "flanker_build_cooldown": 30,
+    
+    "attack_parking_spot_distance": 17.0,
+    "attack_parking_spot_spread": 3.0,
+    
+    "fleet_awareness_radius": 35.0,
+    "fleet_engagement_priority_distance": 20.0,
     
     "fleet_stats": {
         "Flanker": {
@@ -57,37 +69,53 @@
             "maxHP": 80.0,
             "damage": 40.0,
             "patrol_radius": 10.0
+        },
+        "Scout": {
+            "speed": 3.0,
+            "maxHP": 50.0,
+            "damage": 5.0,
+            "patrol_radius": 25.0
         }
     },
     
+    "base_target_height": 2.0,
+
+    "colony_defense_stats": {
+        "Colony": { "defense_dps": 5.0, "base_hp": 500.0 },
+        "Settlement": { "defense_dps": 8.0, "base_hp": 800.0 },
+        "Township": { "defense_dps": 12.0, "base_hp": 1200.0 },
+        "Metropolis": { "defense_dps": 18.0, "base_hp": 2000.0 },
+        "Starport Hub": { "defense_dps": 25.0, "base_hp": 3000.0 }
+    },
+
     "colony_level_thresholds": {
         "Colony": {
             "residents": 0,
             "water_storage": 0,
             "steel_storage": 0,
             "oil_storage": 0,
-            "unlocked_fleet_types": ["Flanker"],
+            "unlocked_fleet_types": ["Flanker", "Scout"],
             "max_fleet_groups": 1
         },
         "Settlement": {
             "residents": 500,
             "steel_storage": 600,
             "oil_storage": 100,
-            "unlocked_fleet_types": ["Flanker", "Fighter"],
+            "unlocked_fleet_types": ["Flanker", "Fighter", "Scout"],
             "max_fleet_groups": 2
         },
         "Township": {
             "residents": 2000,
             "steel_storage": 500,
             "oil_storage": 1000,
-            "unlocked_fleet_types": ["Flanker", "Fighter", "Attacker"],
+            "unlocked_fleet_types": ["Flanker", "Fighter", "Attacker", "Scout"],
             "max_fleet_groups": 4
         },
         "Metropolis": {
             "residents": 5000,
             "steel_storage": 8000,
             "oil_storage": 6000,
-            "unlocked_fleet_types": ["Flanker", "Fighter", "Attacker", "Bomber"],
+            "unlocked_fleet_types": ["Flanker", "Fighter", "Attacker", "Bomber", "Scout"],
             "max_fleet_groups": 6
         },
         "Starport Hub": {
